# zoomcamp-llm-2026

./: .gitignore  pyproject.toml
01-agentic-rag/: home_work.ipynb
01-agentic-rag/course-assistant/: README.md  agent.py  app.py  config.py  data_loader.py  project_notebook.ipynb  rag.py  search_engine.py  tools.py
02-vector-search/: download.py  embedder.py  home_work.ipynb
02-vector-search/vector-search-assistant/: README.md  embeddings.py  hybrid_search.py  manual_vector_search.py  minsearch_vector_search.py  onnx_embedder_demo.py  pgvector_search.py  project_notebook.ipynb  sqlite_reopen_search.py  sqlite_vector_search.py  vector_rag.py
02-vector-search/vector-search-assistant/02-vector-search/vector-search-assistant/: faq_vectors2.db-shm
