[project]
name = "zoomcamp-llm-2026"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "gitsource>=0.0.5",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "minsearch>=0.1.1",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.1",
    "toyaikit>=0.0.11",
]

[tool.uv]
environments = ["sys_platform == 'darwin'"]
