[project]
name = "zoomcamp-llm-2026"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "gitsource>=0.0.5",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "minsearch>=0.1.1",
    "numpy>=2.5.0",
    "onnxruntime>=1.27.0",
    "openai>=2.43.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=3.0.0",
    "sqlitesearch>=0.1.1",
    "tokenizers>=0.22.0,<=0.23.0",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.3",
]

[tool.uv]
environments = ["sys_platform == 'darwin'"]

[dependency-groups]
dev = [
    "huggingface-hub>=1.21.0",
    "jupyter>=1.1.1",
]
